--- a/README
+++ b/README
@@ -13,6 +13,10 @@ while 1:
 		if not buf:
 			break
 
-		sig = ord(buf[0])
+		if isinstance(buf, str):
+			sig = ord(buf[0])  # Python 2
+		else:
+			sig, = buf         # Python 3
+
 		if sig == signal.SIGTERM:
 			break
